# hsresumebuilder

./: .gitignore  .hsresumebuilder.yaml  AGENTS.md  README.md  TODO  hsresumebuilder.cabal  hsresumebuilder.yaml  output.html  package.yaml  run-continously.sh
.github/: CODEOWNERS
.github/workflows/: deploy-pr.yml  hlint.yaml  pre-release.yaml  release.yaml  tagged-release.yaml
app/: Main.hs
docs/: example-joes-choice.html  index.html
src/: Config.hs  JoeTheme.hs  Lib.hs
src/ResumeBuilder/: Config.hs  JoeTheme.hs  Lib.hs  ResumeBuilderModel.hs  ResumeBuilderPreferences.hs
src/ResumeBuilder/Themes/JoeTheme/: Components.hs  Styler.hs  Template.hs
test/: Spec.hs
