cabal-version: 3.6

name:           hsresumebuilder
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/averageflow/hsresumebuilder#readme>
homepage:       https://github.com/githubuser/hsresumebuilder#readme
bug-reports:    https://github.com/githubuser/hsresumebuilder/issues
author:         averageflow
maintainer:     jjbigorra@gmail.com
copyright:      2022 averageflow
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/averageflow/hsresumebuilder

library
  exposed-modules:
      ResumeBuilder.Config
      ResumeBuilder.ResumeBuilderPreferences
      ResumeBuilder.Themes.JoeTheme.Template
      ResumeBuilder.Themes.JoeTheme.Components
      ResumeBuilder.Lib
      ResumeBuilder.Themes.JoeTheme.Styler
  hs-source-dirs:
      src
  build-depends:
      base >=4.7 && <5
    , blaze-html >=0.9.1.2
    , bytestring >=0.10.12.1
    , containers >=0.6.4.1
    , text >=1.2.5.0
    , yaml >=0.11.8.0
  default-language: Haskell2010

executable hsresumebuilder
  main-is: Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      base >=4.7 && <5
    , blaze-html >=0.9.1.2
    , bytestring >=0.10.12.1
    , containers >=0.6.4.1
    , hsresumebuilder
    , text >=1.2.5.0
    , yaml >=0.11.8.0
  default-language: Haskell2010

test-suite hsresumebuilder-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_hsresumebuilder
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:
      base >=4.7 && <5
    , blaze-html >=0.9.1.2
    , bytestring >=0.10.12.1
    , containers >=0.6.4.1
    , hsresumebuilder
    , text >=1.2.5.0
    , yaml >=0.11.8.0
  default-language: Haskell2010
